fix: Resolve overflow: hidden and height: 100% by just applying styles to bodys of blocked-sites ...

--- a/blocker.css
+++ b/blocker.css
@@ -37,7 +37,7 @@
     color: var(--accent-color);
 }
 
-html, body {
+body.site-is-blocked {
     overflow: hidden !important;
     height: 100% !important;
 }
